# ANotVeryGoodObfuscator

./: .gitignore  Binary.cpp  CMakeLists.txt  FileHandler.h  Graphical.h  Main.cpp  Main.h  MainWindow.cpp  Obfuscate.cpp  Obfuscate.h  Obfuscate.sln  Obfuscate.vcxproj  Obfuscate.vcxproj.filters  ROT.cpp  ReverseMessage.cpp  ToFile.cpp  build.bat  fileChooser.cpp  setupBuild.bat
include/: FileHandler.h  Graphical.h  Main.h  Obfuscate.h
src/: Binary.cpp  CMakeLists.txt  Main.cpp  MainWindow.cpp  Obfuscate.cpp  ROT.cpp  ReverseMessage.cpp  ToFile.cpp  fileChooser.cpp
